--- a/docs/src/styles/Hero.css
+++ b/docs/src/styles/Hero.css
@@ -105,60 +105,38 @@
 }
 
 .hero-badge {
-  position: relative;
-  width: 20vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 400px;
   aspect-ratio: 1 / 1;
+  position: relative;
 }
 
 .badge-outer,
 .badge-inner {
   position: absolute;
   inset: 0;
-  width: 100%;
-  height: 100%;
+  margin: auto;
   object-fit: contain;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  will-change: transform;
 }
+
+
 
 .badge-inner {
-  top:  3.5vw;
-  left: 3.5vw;
-  width:  calc(100% - 7vw);  /* gap on each side */
-  height: calc(100% - 7vw);
+  width: 70%;
+  animation-name: spin-cw;
 }
-
 .badge-outer {
+  width: 100%;
   animation-name: spin-ccw;
 }
 
-.badge-inner {
-  animation-name: spin-cw;
-}
 
 @keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (max-width: 968px) {
-  .hero-container {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-  
-  .hero-title {
-    font-size: 3rem;
-  }
-  
-  .buttons-container {
-    justify-content: center;
-  }
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 
 @keyframes spin-cw {
