--- a/docs/src/styles/mobile.css
+++ b/docs/src/styles/mobile.css
@@ -1,21 +1,24 @@
-
+/* 481 - 768px */
 @media (max-width: 768px) {
+    /* global */
+    section { padding: 3rem 1.5rem !important; }
+    .section-title { font-size: 2rem; }
+
+
+    /* other */
     .hero-container, .about-content, .experience-grid, .projects-grid {
         grid-template-columns: 1fr;
     }
-    section {
-        padding: 3rem 1.5rem !important;
-    }
-    .section-title {
-        font-size: 2rem;
-    }
 
+
+    /* hero */
     .hero { margin: 65px 0 0 0; }
     .hero-title { font-size: 2rem; }
     .hero-badge { width: 90%; }
     .badge-inner { width: 65%; height: 65%; top: 17.5%; left: 17.5%; }
 
 
+    /* footer */
     .footer-right, .footer-center { display: none; }
     .footer-copyright { font-size: 1.2rem; }
     .footer-row{
@@ -27,31 +30,30 @@
         justify-self: center;
         align-self: center;
     }
+
 
     /* about section */
     .about-logo img{ width: 100%; }
 }
 
-@media (max-width: 480px) {
-    section {
-        padding: 2rem 1rem !important;
-    }
-    .section-title {
-        font-size: 1.5rem;
-    }
 
+/* 361 - 480px */
+@media (max-width: 480px) {
+    /* global */
+    section { padding: 2rem 1rem !important; }
+    .section-title { font-size: 1.5rem; }
+
+
+    /* hero */
     .hero { margin: 65px 0 0 0; }
     .hero-title { font-size: 2rem; }
     .hero-badge { width: 90%; }
     .badge-inner { width: 65%; height: 65%; top: 17.5%; left: 17.5%; }
 
 
-    .form-row {
-        grid-template-columns: 1fr;
-    }
-    .tech-grid {
-        grid-template-columns: repeat(3, 1fr);
-    }
+    /* footer */
+    .form-row { grid-template-columns: 1fr; }
+    .tech-grid { grid-template-columns: repeat(3, 1fr); }
     .footer-right, .footer-center { display: none; }
     .footer-copyright { font-size: 1.2rem; }
     .footer-row{
@@ -63,13 +65,37 @@
         justify-self: center;
         align-self: center;
     }
+    .footer-banner-live{ margin: 0 0 8rem 0; }
 
+
+    /* about section */
     .about-logo {
         display: flex;
         justify-content: center;
         align-items: center;
     }
-
-    /* about section */
-    .about-logo img{ width: 100%; }
+    .about-logo img { width: 100%; }
 }
+
+
+/* 1 - 360px */
+@media (max-width: 360px) {
+    /* global */
+    ::-webkit-scrollbar { display: none; }
+
+
+    /* hero */
+    .hero-badge { width: 100%; }
+    .badge-inner { width: 65%; height: 65%; top: 17.5%; left: 17.5%; }
+
+
+    /* footer */
+    .footer-copyright { font-size: 1rem; }
+    .footer-banner-live{ margin: 0 0 8rem 0; }
+}
+
+
+@media (min-width: 1200px) { .footer-banner-bg { height: 46vh;  min-height: 440px; width: 100vw;} }
+@media (min-width: 1800px) { .footer-banner-bg { height: 36vh;  min-height: 850px; width: 100vw;} }
+@media (max-width: 900px)  { .footer-banner-bg { height: 32vh;  min-height: 180px; width: 100vw;} }
+@media (max-width: 768px)  { .footer-banner-bg { height: 200px; min-height: 120px; width: 100vw;} }
